# pytest_result_sender

./: msg.md  pyproject.toml  pytest.ini
.github/workflows/: publish_to_pypi.yaml
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
